# Summarize_video

./: .gitignore  api.py  config.py  dashboard.py  pyproject.toml  readme.md  summaries.py  utils.py
audio/: desc.txt
