[tool.poetry]
name = "dsl_summary"
version = "0.1.0"
description = ""
authors = ["Data Science Lab"]

[tool.poetry.dependencies]
python = ">=3.8.8,<3.11"
pandas = "^1.5.2"
requests = "^2.28.1"
whisper = { git = "https://github.com/openai/whisper.git", branch = "main" }
torch = "^1.13.1"
tqdm = "^4.64.1"
transformers = "^4.25.1"
ffmpeg-python = "^0.2.0"
more-itertools = "^9.0.0"
huggingface = "^0.0.1"
tube-dl = "^5.1.1"
moviepy = "^1.0.3"
yt-dlp = "^2023.1.6"
Flask = "^2.2.2"


